--- a/components/SideNav/Nav.css
+++ b/components/SideNav/Nav.css
@@ -1,33 +1,34 @@
 .nav-container {
+  /* position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 50; */
   display: flex;
   justify-content: space-between;
 
-  /* padding: 0 30px; */
-  margin: 0;
-  min-height: 60px;
-  background-color: rgb(255, 255, 255);
+  height: 60px;
+  background-color: #fff;
   box-shadow: 0px 0px 10px rgba(0, 31, 104, 0.3);
 }
+
 .nav-item {
+  font-size: medium;
   width: 100%;
-  text-align: center;
-  /* height: 100%; */
-  padding: 0 8px;
-  /* padding: 15px 12px; */
-  /* border-radius: 12px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  padding: auto 8px;
   border: none;
   cursor: pointer;
-  background: #fff;
-  color: #111;
-  transition: background 0.12s, border-color 0.12s, color 0.12s;
+  background: transparent;
+  color: rgb(176, 172, 199);
+  z-index: 2;
+  transition: background 0.2s ease, color 0.2s ease;
 }
 
+/* active color only */
 .nav-item.active {
-  background: #0b5cff;
   color: #fff;
-}
-
-.nav-item:disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
+  background: #915a5a;
 }
