--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
+* {
+  font-family: inherit;
+}
+
 .app-container {
-    /* display: flex; */
-    min-height: 100vh;
-    margin: 0;
+  min-height: 100vh;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
