Add Vin decoder button and route

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 @theme {
   /* --color-primary: #915a5a; */
   --color-primary: #1d2a51;
+  --color-lightPrimary: #24356a;
   --color-secondary: #000000;
   --color-accent: #ffffff;
 }
